added the functionality of adding a recipe

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,3 +1,4 @@
+@use "./variables.scss";
 //Очистим все отступы и границы
 * {
   padding: 0;
@@ -90,4 +91,44 @@ h5,
 h6 {
   font-size: inherit;
   font-weight: 400;
+}
+.d-flex {
+  display: flex;
+}
+.align-center {
+  align-items: center;
+}
+.row {
+  display: flex;
+  margin-bottom: 16px;
+}
+.col {
+  flex: 1 1 50%;
+  width: 50%;
+
+  &:not(:last-child) {
+    margin-right: 16px;
+    width: calc(50% - 8px);
+  }
+
+  &-small {
+    flex: 1 1 5%;
+    width: 5%;
+  }
+}
+.label {
+  font-size: 13px;
+  padding-bottom: 4px;
+}
+.subtitle {
+  padding-bottom: 20px;
+  font-size: 18px;
+  font-weight: 700;
+  color: variables.$violet;
+}
+.w-100 {
+  width: 100%;
+}
+.align-items-flex-end {
+  align-items: flex-end;
 }
